# freeotp_migrate

./: .gitignore  Cargo.toml  README.md
src/: main.rs  token.rs
